--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,8 @@
 
 /*common*/
 body {font: 15px 'Noto Sans KR',sans-serif;}
+#skip-nav {position: fixed; left: 0; top: -36px; width: 100%; line-height: 35px; font-size: 16px; border-bottom: 1px solid #ffffff; color: #ffffff; background: #999999; background: rgba(0, 0, 0, 0.6); text-align: center; z-index: 10000; transition: top 0.3s;}
+#skip-nav:focus {top: 0;}
 
 /*header*/
 header {position: fixed; top: 0; width: 100%; background-color: #f4f5f8; z-index: 100; border-bottom: 1px solid #fff; height: 79px; overflow: visible;}
@@ -9,16 +11,17 @@ header .header-wrap {width: 1400px; margin: 0 auto; padding: 0 20px;}
 header .logo {float: left; width: 77px; margin-top: 30px; margin-left: 20px; height: 17px; display: block; background: transparent url(../img/logo_upbit.png) no-repeat center/cover;}
 header .gnb {float: left; margin-left: 40px; width: 605px; height: 100%;}
 header .gnb ul li {float: left; width: 81px; height: 79px; line-height: 79px; color: #2b2b2b; margin-left: 20px;}
-header .gnb ul li:hover {font-weight: bold;}
+header .gnb ul li:last-child a {background: yellow;}
+header .gnb ul li:hover, header .gnb ul li:focus-within {font-weight: bold;}
 header .tnb {position: absolute; top: 30px; right: 100px;}
 header .tnb ul li {position: relative; float: left; padding-left: 30px; font-size: 13px;}
-header .tnb ul li:hover {font-weight: bold;}
+header .tnb ul li:hover, header .tnb ul li:focus-within {font-weight: bold;}
 header .tnb .service-intro {width: 24px; height: 40px;}
 header .tnb .service-intro .service {display: block; font-size: 13px;}
 header .tnb .service-intro .service span {position: relative; display: inline-block; overflow: hidden; width: 16px; height: 16px; padding-right: 8px; text-indent: -9999px; vertical-align: middle; background: url(../img/icon_main_service.png) no-repeat;}
 
 header .tnb .service-intro .service-box {width: 0; overflow: hidden;}
-header .tnb .service-intro:hover .service-box {width: 300px; position: absolute; top: 30px; right: -70px; border: 1px solid #d5d6dc; box-sizing: border-box; background: #fff; font-weight: normal;}
+header .tnb .service-intro:hover .service-box, header .tnb .service-intro:focus-within .service-box {width: 300px; position: absolute; top: 30px; right: -70px; border: 1px solid #d5d6dc; box-sizing: border-box; background: #fff; font-weight: normal;}
 
 header .tnb .service-box dt {display: block; padding-left: 15px; line-height: 30px; background: #f9fafc; font-size: 12px; color: #999;}
 header .tnb .service-box .app-down {padding: 14px;}
@@ -31,8 +34,8 @@ header .tnb .service-box .app-down .app-qrcode .link li a {display: block; width
 header .tnb .service-box .app-down .app-qrcode .link li a span {vertical-align: middle; padding-right: 5px;}
 header .tnb .service-box .app-down .app-qrcode .link li a span img {vertical-align: baseline;}
 
-header .tnb .service-box .associated ul li {width: 100%; line-height: normal; border-bottom: 1px solid #f1f1f4;}
-header .tnb .service-box .associated ul li:hover {background: #f1f1f4;}
+header .tnb .service-box .associated ul li {width: 100%; line-height: normal; border-bottom: 1px solid #f1f1f4; box-sizing: border-box; overflow: hidden;}
+header .tnb .service-box .associated ul li:hover, header .tnb .service-box .associated ul li:focus-within {background: #f1f1f4;}
 header .tnb .service-box .associated ul li:last-child {border-bottom: 0;}
 header .tnb .service-box .associated ul li > a {position: relative; display: block; padding: 11px 35px 12px;}
 header .tnb .service-box .associated ul li > a .app-logo {position: absolute; left: -15px; top: 44%; transform: translateY(-50%); font-size: 0;}
@@ -46,14 +49,14 @@ header .tnb .nation {padding-right: 10px; background: url(../img/gnbArrow-down.p
 header .tnb .nation img {vertical-align: middle; width: 30px; height: 20.66px; box-sizing: border-box; border: 1px solid #d7d8dd;}
 header .tnb .nation-view {width: 40px; height: 40px;}
 header .tnb .nation-view .nation-choice {width: 0; overflow: hidden;}
-header .tnb .nation-view:hover .nation-choice {width: 180px; position: absolute; right: 0; top: 30px; box-sizing: border-box; border: 1px solid #d5d6dc; background: #fff;}
-header .tnb .nation-choice .choice {width: 100%; height: 30px; line-height: 30px; padding-left: 14px; background: #f9fafc; font-size: 12px; color: #999; font-weight: 400; box-sizing: border-box}
+header .tnb .nation-view:hover .nation-choice, header .tnb .nation-view:focus-within .nation-choice {width: 180px; position: absolute; right: 0; top: 30px; box-sizing: border-box; border: 1px solid #d5d6dc; background: #fff;}
+header .tnb .nation-choice .choice {width: 100%; height: 30px; line-height: 30px; padding-left: 14px; background: #f9fafc; font-size: 12px; color: #999; font-weight: 400; box-sizing: border-box;}
 header .tnb .nation-choice ul li {width: 100%; border-bottom: 1px solid #f1f1f4; height: 44px; line-height: 44px; padding-left: 14px; text-align: left; font-size: 13px; vertical-align: top; font-weight: 500; color: #2b2b2b; box-sizing: border-box;}
+header .tnb .nation-choice ul li:hover, header .tnb .nation-choice ul li:focus-within {background: #f4f5f8; cursor: pointer;}
 header .tnb .nation-choice .choiced {background: #f4f5f8;}
 header .tnb .nation-choice .choiced a {cursor: default;}
 header .tnb .nation-choice ul li:last-child {border-bottom: 0;}
 header .tnb .nation-choice ul li a {width: 100%; display: block;}
-header .tnb .nation-choice ul li a:hover {background: #f4f5f8;}
 header .tnb .nation-choice ul li a span {padding-right: 10px;}
 header .tnb .nation-choice ul li a img {width: 30px; height: 20.66px; box-sizing: border-box; border: 1px solid #d7d8dd; vertical-align: middle;}
 
@@ -81,7 +84,7 @@ header .tnb .nation-choice ul li a img {width: 30px; height: 20.66px; box-sizing
 .main-visual .main-notice .notice-header .more-btn {position: absolute; top: 0; right: 0; display: inline-block;}
 .main-visual .main-notice li {background: transparent url(../img/dot.png) no-repeat 0; margin-top: 10px; padding-left: 10px; line-height: 15px; font-weight: 400; color: #fff;}
 .main-visual .main-notice li a {width: 290px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; display: inline-block;}
-.main-visual .main-notice li > a:hover {text-decoration: underline;}
+.main-visual .main-notice li > a:hover, .main-visual .main-notice li > a:focus-within {text-decoration: underline;}
 
 /*app-banner*/
 .app-banner {width: 100%; height: 90px; overflow: hidden;}
@@ -103,10 +106,10 @@ header .tnb .nation-choice ul li a img {width: 30px; height: 20.66px; box-sizing
 .data-display .chart-list .index-data span .down {background: transparent url(../img/icoUpDown.png) no-repeat 0 -31px; background-size: 12px; width: 12px; height: 8px; display: inline-block; margin-right: -6px;}
 .data-display .chart-list .index-data span strong {margin-left: 6px;}
 .data-display .chart-list .chart-area {margin-top: 30px;}
-.data-display .chart-ubmi .chart-area .chart {position: relative; width: 359px; height: 148px; text-align: left; border: 1px solid #eee; background-image: url(../img/ubmi-chart.jpg);}
-.data-display .chart-ubmi .chart-area .chart:hover {background-image: url(../img/ubmi-chart-hover.jpg);}
-.data-display .chart-ubai .chart-area .chart {position: relative; width: 359px; height: 148px; text-align: left; border: 1px solid #eee; background-image: url(../img/ubai-chart.jpg);}
-.data-display .chart-ubai .chart-area .chart:hover {background-image: url(../img/ubai-chart-hover.jpg);}
+.data-display .chart-ubmi .chart-area .chart {position: relative; width: 359px; height: 148px; text-align: left; border: 1px solid #eee; background-image: url(../img/ubmi-chart.jpg); transition: all 0.4s ease;}
+.data-display .chart-ubmi .chart-area .chart:hover, .data-display .chart-ubmi .chart-area .chart:focus-within {background-image: url(../img/ubmi-chart-hover.jpg);}
+.data-display .chart-ubai .chart-area .chart {position: relative; width: 359px; height: 148px; text-align: left; border: 1px solid #eee; background-image: url(../img/ubai-chart.jpg); transition: all 0.4s ease;}
+.data-display .chart-ubai .chart-area .chart:hover, .data-display .chart-ubai .chart-area .chart:focus-within {background-image: url(../img/ubai-chart-hover.jpg);}
 .data-display .chart-area .remark {margin-top: 14px 0 0;}
 .data-display .remark span {margin-right: 16px; font-size: 12px; color: #666;}
 .data-display .remark .today i {width: 10px; height: 2px; background-color: #093687; vertical-align: middle;}
@@ -114,7 +117,7 @@ header .tnb .nation-choice ul li a img {width: 30px; height: 20.66px; box-sizing
 .data-display .remark i {font-style: normal; display: inline-block; margin-right: 8px;}
 
 .data-display .chart-list .coin-price ul li {font-size: 16px; border-bottom: 1px solid #eee; padding: 11px 0;}
-.data-display .coin-price ul li a:hover label {text-decoration: underline;}
+.data-display .coin-price ul li a:hover label, .data-display .coin-price ul li a:focus-within label {text-decoration: underline;}
 .data-display .coin-price ul li label {width: 120px; float: left; height: 24px; line-height: 24px;}
 .data-display .coin-price ul li .price-data {padding-left: 120px; box-sizing: border-box; width: 100%; height: 24px; line-height: 24px; text-align: right; position: relative;}
 .data-display .coin-price .price-data .price {padding-right: 90px; color: #0051c7;}
@@ -122,7 +125,7 @@ header .tnb .nation-choice ul li a img {width: 30px; height: 20.66px; box-sizing
 
 /*app-info1*/
 .app-info1 {width: 100%; height: 960px; padding-top: 80px; box-sizing: border-box; display: inline-table; background-color: #093687;}
-.app-info1 .app-wrap {background: transparent url(../img/sliderGalbg.png) no-repeat center 130px; margin: 0 auto; height: 100%; padding: 0 20px; overflow: hidden;}
+.app-info1 .app-wrap {background: transparent url(../img/sliderGalbg.png) no-repeat center 130px; margin: 0 auto; position: relative; width: 1400px; height: 100%; padding: 0 170px; overflow: hidden; box-sizing: border-box;}
 .app-info1 h2 {color: #fff; text-align: center; font-size:36px; font-weight: 300;}
 .app-info1 span {margin-top: 10px; text-align: center; font-size: 16px; width: 100%; display: block; color: #fff; font-weight: 300;}
 .app-info1 .app-slider {height: 620px;}
@@ -132,25 +135,35 @@ header .tnb .nation-choice ul li a img {width: 30px; height: 20.66px; box-sizing
 .app-info1 .app-link-btn .app-and {background: transparent url(../img/icoStore.png) no-repeat 0 -31px; background-size: 16px;}
 .app-info1 .app-link-btn .app-ios {background: transparent url(../img/icoStore.png) no-repeat 0 -92px; background-size: 16px;}
 .app-info1 .app-slider-bg {padding-top: 0; position: relative; width: 100%; margin: 0 auto;}
-.app-info1 .app-slider-circle-wrap {width: 100%; position: relative; height: 620px;}
+.app-info1 .app-slider-circle-wrap {width: 100%; position: absolute; height: 620px;}
 .app-info1 .app-mobile-slider {width: 234px; overflow: hidden; position: absolute; top: 123px; left: 50%; margin-left: -117px; z-index: 9;}
 .app-info1 .app-slider-bg .app-bg {position: absolute; top: 46px; left: 50%; margin-left: -172px; z-index: 10;}
 .app-info1 .app-slider-bg .app-mobile-slider {width: 234px; position: absolute; top: 123px; left: 50%; margin-left: -117px; z-index: 9; overflow: hidden;}
-
-.app-info1 .app-slider-bg .app-slider-circle-wrap div {width: 400px;}
-/*.app-info1 .app-slider-bg .app-slider-circle-wrap div button {border: 0; width: 400px; height: 140px; display: inline-block; background: transparent; z-index: 99; position: absolute; right: -120px; top: 0;}*/
-.app-info1 .app-slider-bg .app-slider-circle-wrap div:first-child {position: absolute; top: 97px; left: 100px;}
-.app-info1 .app-slider-bg .app-slider-circle-wrap div:nth-child(2) {position: absolute; top: 59px; right: 200px;}
-.app-info1 .app-slider-bg .app-slider-circle-wrap div:nth-child(3) {position: absolute; bottom: 50px; left: 150px;}
-.app-info1 .app-slider-bg .app-slider-circle-wrap div:last-child {position: absolute; bottom: 97px; right: 250px;}
-
-.app-info1 .app-slider-bg .app-slider-circle-wrap div .app-text {padding-left: 100px;}
+.app-info1 .app-slider-bg .app-mobile-slider img {}
+.app-info1 .app-slider-bg .app-slider-circle-wrap div {position: absolute; width: 400px; box-sizing: border-box;}
+.app-info1 .app-slider-bg .app-slider-circle-wrap div:nth-child(2n-1) img {position: absolute; right: 0; top: 0;}
+.app-info1 .app-slider-bg .app-slider-circle-wrap div:nth-child(2n) img {position: absolute; left: 0; top: 0;}
+.app-info1 .app-slider-bg .app-slider-circle-wrap div.on img.on {opacity: 0;}
+.app-info1 .app-slider-bg .app-slider-circle-wrap div.on img.off {opacity: 0;}
+.app-info1 .app-slider-bg .app-slider-circle-wrap div img.on {opacity: 0;}
+.app-info1 .app-slider-bg .app-slider-circle-wrap div img.off {opacity: 1;}
+.app-info1 .app-slider-bg .app-slider-circle-wrap div a.slide-btn {width: 400px; height: 140px; display: inline-block; padding: 0; background: transparent; transition: all 0.4s; z-index: 99; cursor: pointer;}
+.app-info1 .app-slider-bg .app-slider-circle-wrap div a.slide-btn img.on {opacity: 0;}
+.app-info1 .app-slider-bg .app-slider-circle-wrap div a.slide-btn img.off {opacity: 0}
+.app-info1 .app-slider-bg .app-slider-circle-wrap div:first-child {top: 97px; left: -125px;}
+.app-info1 .app-slider-bg .app-slider-circle-wrap div:first-child a.slide-btn {position: absolute; right: 0; top: 0; text-align: right;}
+.app-info1 .app-slider-bg .app-slider-circle-wrap div:first-child p.app-text {text-align: right; padding-right: 100px;}
+.app-info1 .app-slider-bg .app-slider-circle-wrap div:nth-child(2) {top: 59px; right: -90px;}
+.app-info1 .app-slider-bg .app-slider-circle-wrap div:nth-child(2) a.slide-btn {position: absolute; left: 0; top: 0; text-align: left;} 
+.app-info1 .app-slider-bg .app-slider-circle-wrap div:nth-child(2) p.app-text {padding-left: 100px;}
+.app-info1 .app-slider-bg .app-slider-circle-wrap div:nth-child(3) {bottom: 50px; left: -40px;}
+.app-info1 .app-slider-bg .app-slider-circle-wrap div:nth-child(3) a.slide-btn {position: absolute; right: 0; top: 0; text-align: right;}
+.app-info1 .app-slider-bg .app-slider-circle-wrap div:nth-child(3) p.app-text {text-align: right; padding-right: 100px;}
+.app-info1 .app-slider-bg .app-slider-circle-wrap div:last-child {bottom: 97px; right: -60px;}
+.app-info1 .app-slider-bg .app-slider-circle-wrap div:last-child a.slide-btn {position: absolute; left: 0; top: 0; text-align: left;} 
+.app-info1 .app-slider-bg .app-slider-circle-wrap div:last-child {padding-left: 100px;}
 .app-info1 .app-slider-bg .app-slider-circle-wrap div .app-title {display: block; color: #fff; font-size: 20px; margin-top: 28px;}
-.app-info1 .app-slider-bg .app-slider-circle-wrap div .app-subtext {display: block; color: #83a4cb; font-size: 16px;}
-.app-info1 .app-slider-circle-wrap div:nth-child(2n+1) .app-title {text-align: right;}
-.app-info1 .app-slider-circle-wrap div:nth-child(2n) .app-title {text-align: left;}
-.app-info1 .app-slider-circle-wrap div:nth-child(2n+1) .app-subtext {text-align: right;}
-.app-info1 .app-slider-circle-wrap div:nth-child(2n) .app-subtext {text-align: left;}
+.app-info1 .app-slider-bg .app-slider-circle-wrap div .app-subtext {display: block; color: #83a4cb; font-size: 16px; margin-top: 10px;}
 
 
 /*app-info2*/
@@ -188,7 +201,8 @@ header .tnb .nation-choice ul li a img {width: 30px; height: 20.66px; box-sizing
 .app-info4 .help .help-ico {width: 50px; height: 50px; display: inline-block; margin-right: 10px; background: transparent url(../img/icoList.png) no-repeat 0 -75px; background-size: 50px;}
 .app-info4 .help .tel {font-size: 34px; height: 47px; line-height: 47px;}
 .app-info4 .help .tel span {font-size: 18px; margin-left: 5px; vertical-align: middle; color: #2b2b2b; height: 40px; line-height: 40px;}
-.app-info4 .help .talk > a {line-height: 43px; margin-top: 15px; margin-right: 7px; padding: 0 18px; border: 1px solid #ddd; display: inline-block; font-size: 16px; color: #666; height: 46px;}
+.app-info4 .help .talk > a {line-height: 43px; margin-top: 15px; margin-right: 7px; padding: 0 18px; border: 1px solid #ddd; display: inline-block; font-size: 16px; color: #666; height: 46px; transition: all 0.4s ease;}
+.app-info4 .help .talk > a:hover {background: #ddd; color: #fff; font-weight: bold;}
 .app-info4 .help .talk a .app-kakao {background: transparent url(../img/InfoIcoBg.png) no-repeat 0 0; background-size: 18px; height: 18px;}
 .app-info4 .lounge {width: 33.333%; float: left;}
 .app-info4 .lounge .lounge-ico {width: 50px; height: 50px; display: inline-block; margin-right: 10px; background: transparent url(../img/icoList.png) no-repeat 0 0; background-size: 50px;}
@@ -234,5 +248,5 @@ footer .footer-menu dl {width: 50%; float: left;}
 footer .footer-menu dl dt {color: #2b2b2b; margin-bottom: 10px; font-weight: 700;}
 footer .footer-menu dl dd {line-height: 25px;}
 footer .footer-menu dl dd a {color: #666;}
-footer .footer-menu dl dd a:hover {text-decoration: underline;}
+footer .footer-menu dl dd a:hover, footer .footer-menu dl dd a:focus-within {text-decoration: underline;}
 footer .footer-menu dl:first-child dd:last-child a {color: #093687; font-size: 15px; font-weight: 600;}
